--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pegel-online",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Lambda function for Alexa",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
   "scripts": {
     "invoke": "aws lambda invoke --function-name 'pegelOnline' --payload fileb://../tests/events/alexa-start-session.json ../tests/out.txt && cat ../tests/out.txt",
     "test": "mocha",
-    "deploy": "npm run zip && npm run upload",
+    "deploy": "npm prune --production && npm run zip && npm run upload",
     "upload": "aws lambda update-function-code --function-name 'pegelOnline' --zip-file fileb://../index.zip",
     "zip": "zip -r ../index.zip . -x 'package.json' 'test/*' '*.git*' '*~' "
   },
