--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pegel-online",
-  "version": "1.2.1",
-  "description": "Lambda function for Alexa",
+  "version": "1.3.0",
+  "description": "Alexa Skill for interacting with http://www.pegelonline.wsv.de",
   "repository": {
     "type": "git",
     "url": "https://github.com/sgruendel/alexa-pegel-online.git"
@@ -17,11 +17,11 @@
   "author": "Stefan Gründel",
   "license": "GPL-3.0",
   "dependencies": {
-    "alexa-sdk": "^1.0.7"
+    "alexa-sdk": "^1.0.25"
   },
   "devDependencies": {
-    "aws-lambda-mock-context": "^3.0.1",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "aws-lambda-mock-context": "^3.1.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
   }
 }
