--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "main": "index.js",
   "scripts": {
     "update-stations": "node src/create-station-slot-values.js",
-    "invoke": "aws lambda invoke --function-name 'pegelOnline' --payload fileb://../tests/events/alexa-start-session.json ../tests/out.txt && cat ../tests/out.txt",
+    "invoke": "aws lambda invoke --function-name 'pegelOnline' --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test": "mocha",
-    "deploy": "npm prune --production && npm run zip && npm run upload",
-    "upload": "aws lambda update-function-code --function-name 'pegelOnline' --zip-file fileb://../index.zip",
-    "zip": "zip -r ../index.zip . -x 'package.json' 'test/*' '*.git*' '*~' "
+    "deploy": "npm run zip && npm run upload",
+    "upload": "aws lambda update-function-code --function-name 'pegelOnline' --zip-file fileb://index.zip",
+    "zip": "npm prune --production && zip -r index.zip node_modules && cd src && zip ../index.zip *"
   },
   "author": "Stefan Gründel",
   "license": "GPL-3.0",
