--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "update-stations": "node src/create-station-slot-values.js",
     "invoke": "aws lambda invoke --function-name 'pegelOnline' --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
-    "test": "mocha",
+    "test": "nyc --reporter=lcov --reporter=text mocha",
     "deploy": "npm run zip && npm run upload",
     "upload": "aws lambda update-function-code --function-name 'pegelOnline' --zip-file fileb://index.zip",
     "zip": "npm prune --production && zip -r index.zip node_modules && cd src && zip ../index.zip *"
@@ -25,7 +25,8 @@
     "chai": "^4.1.2",
     "eslint": "^4.18.0",
     "eslint-config-strongloop": "^2.1.0",
-    "mocha": "^5.0.1"
+    "mocha": "^5.0.1",
+    "nyc": "^11.4.1"
   },
   "eslintConfig": {
     "extends": "strongloop",
