Fix aws calls on Windows.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "main": "index.js",
   "scripts": {
     "update-stations": "node src/create-station-slot-values.js",
-    "invoke": "aws lambda invoke --function-name 'pegelOnline' --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
+    "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test": "nyc --reporter=lcov --reporter=text mocha",
     "deploy": "npm run zip && npm run upload",
-    "upload": "aws lambda update-function-code --function-name 'pegelOnline' --zip-file fileb://index.zip",
+    "upload": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
     "zip": "npm prune --production && zip -r index.zip node_modules && cd src && zip ../index.zip *"
   },
   "author": "Stefan Gründel",
