--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
-  "name": "pegel-online",
-  "version": "1.3.2",
+  "name": "alexa-pegel-online",
+  "version": "2.0.0",
   "description": "Alexa Skill for interacting with http://www.pegelonline.wsv.de",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sgruendel/alexa-pegel-online.git"
-  },
   "main": "index.js",
   "scripts": {
     "update-stations": "node src/create-station-slot-values.js",
     "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test": "nyc --reporter=lcov --reporter=text mocha",
-    "deploy": "npm run zip && npm run upload",
-    "upload": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
-    "zip": "npm prune --production && zip -r index.zip node_modules && cd src && zip ../index.zip *"
+    "deploy-lambda": "npm prune --production && npm run lambda-zip && npm run lambda-update && npm install",
+    "lambda-zip": "zip -r index.zip node_modules && cd src && zip ../index.zip *",
+    "lambda-update": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
+    "deploy-skill": "ask deploy --target skill",
+    "deploy-model": "ask deploy --target model"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sgruendel/alexa-pegel-online.git"
   },
   "author": "Stefan Gründel",
   "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/sgruendel/alexa-pegel-online/issues"
+  },
+  "homepage": "https://github.com/sgruendel/alexa-pegel-online#readme",
   "dependencies": {
-    "alexa-sdk": "^1.0.25",
-    "request": "^2.85.0",
+    "ask-sdk-core": "^2.0.9",
+    "ask-sdk-model": "^1.5.0",
+    "i18next": "^11.9.0",
+    "i18next-sprintf-postprocessor": "^0.2.2",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
+    "alexa-skill-test-framework": "^1.2.2",
     "chai": "^4.1.2",
-    "eslint": "^4.18.0",
+    "eslint": "^5.6.0",
     "eslint-config-strongloop": "^2.1.0",
-    "mocha": "^5.0.1",
-    "nyc": "^11.4.1"
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1"
   },
   "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 2017
+    },
     "extends": "strongloop",
     "env": {
       "es6": true,
