Totally reworked dialog interface. * distinguish between queries for station and water now * autogenerate interaction model from www.pegelonline.wsv.de data * work in progress, intent handlers and test cases not funcitonal yet

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Alexa Skill for interacting with http://www.pegelonline.wsv.de",
   "main": "index.js",
   "scripts": {
-    "update-stations": "node src/create-station-slot-values.js",
     "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test": "nyc --reporter=lcov --reporter=text mocha",
     "deploy-lambda": "npm prune --production && npm run lambda-zip && npm run lambda-update && npm install",
     "lambda-zip": "zip -r index.zip node_modules && cd src && zip ../index.zip *",
     "lambda-update": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
     "deploy-skill": "ask deploy --target skill",
-    "deploy-model": "ask deploy --target model"
+    "deploy-model": "npm run create-model && ask deploy --target model",
+    "create-model": "node src/create-model.js"
   },
   "repository": {
     "type": "git",
