--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test": "nyc --reporter=lcov --reporter=text mocha",
     "deploy-lambda": "npm prune --production && npm run lambda-zip && npm run lambda-update && npm install",
-    "lambda-zip": "zip -r index.zip node_modules && cd src && zip ../index.zip *",
+    "lambda-zip": "zip -x node_modules/.cache/* -r index.zip node_modules && cd src && zip ../index.zip *",
     "lambda-update": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
     "deploy-skill": "ask deploy --target skill",
     "deploy-model": "npm run create-model && ask deploy --target model",
