--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
-    "test": "nyc --reporter=lcov --reporter=text mocha",
+    "test:unit": "nyc --reporter=lcov --reporter=text mocha test/unit/*",
+    "test:integration": "nyc --reporter=lcov --reporter=text mocha test/integration/*",
+    "test": "npm run test:unit && npm run test:integration",
     "deploy-lambda": "npm prune --production && npm run lambda-zip && npm run lambda-update && npm install",
     "lambda-zip": "zip -x 'node_modules/.cache/*' -r index.zip node_modules && cd src && zip ../index.zip *",
     "lambda-update": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
