--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test:unit": "nyc --reporter=lcov --reporter=text mocha test/unit/*",
-    "test:integration": "nyc --reporter=lcov --reporter=text mocha test/integration/*",
+    "test:integration": "mocha --timeout=20000 test/integration/*",
     "test": "npm run test:unit && npm run test:integration",
     "deploy-lambda": "npm prune --production && npm run lambda-zip && npm run lambda-update && npm install",
     "lambda-zip": "zip -x 'node_modules/.cache/*' -r index.zip node_modules && cd src && zip ../index.zip *",
