--- a/.ask/config
+++ b/.ask/config
@@ -5,7 +5,7 @@
       "was_cloned": false,
       "resources": {
         "manifest": {
-          "eTag": "18551f9832b11625e8acc78f3825d013"
+          "eTag": "77a29ffb98bbfa2dca2292fa4ad6f9ee"
         },
         "interactionModel": {
           "de-DE": {
@@ -14,7 +14,7 @@
         },
         "lambda": [
           {
-            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline",
+            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:7",
             "awsRegion": "eu-west-1",
             "functionName": "pegelOnline",
             "alexaUsage": [
@@ -29,7 +29,7 @@
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline"
+                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:7"
               }
             }
           }
