--- a/.ask/config
+++ b/.ask/config
@@ -5,16 +5,16 @@
       "was_cloned": false,
       "resources": {
         "manifest": {
-          "eTag": "77a29ffb98bbfa2dca2292fa4ad6f9ee"
+          "eTag": "5308ae04d8525e84001db574e750b19a"
         },
         "interactionModel": {
           "de-DE": {
-            "eTag": "0f03a41ef7c941225880d3fe57c7e915"
+            "eTag": "bbed6629fc8b41f83458caca4d4f1046"
           }
         },
         "lambda": [
           {
-            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:7",
+            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline",
             "awsRegion": "eu-west-1",
             "functionName": "pegelOnline",
             "alexaUsage": [
@@ -29,7 +29,7 @@
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:7"
+                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline"
               }
             }
           }
