--- a/.ask/config
+++ b/.ask/config
@@ -5,7 +5,7 @@
       "was_cloned": false,
       "resources": {
         "manifest": {
-          "eTag": "5308ae04d8525e84001db574e750b19a"
+          "eTag": "a236c976aab96add7cdf83a05e4be654"
         },
         "interactionModel": {
           "de-DE": {
@@ -14,7 +14,7 @@
         },
         "lambda": [
           {
-            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline",
+            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:8",
             "awsRegion": "eu-west-1",
             "functionName": "pegelOnline",
             "alexaUsage": [
@@ -29,7 +29,7 @@
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline"
+                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:8"
               }
             }
           }
