--- a/.ask/config
+++ b/.ask/config
@@ -5,16 +5,16 @@
       "was_cloned": false,
       "resources": {
         "manifest": {
-          "eTag": "a236c976aab96add7cdf83a05e4be654"
+          "eTag": "8ec9854020eba0c5e4331a346c57af6c"
         },
         "interactionModel": {
           "de-DE": {
-            "eTag": "5b1be1d91a4c99eb1f787f765a44d116"
+            "eTag": "883768b5487db5fc41c7410b7fd58900"
           }
         },
         "lambda": [
           {
-            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:8",
+            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline",
             "awsRegion": "eu-west-1",
             "functionName": "pegelOnline",
             "alexaUsage": [
@@ -29,7 +29,7 @@
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:8"
+                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline"
               }
             }
           }
