--- a/.ask/config
+++ b/.ask/config
@@ -5,16 +5,16 @@
       "was_cloned": false,
       "resources": {
         "manifest": {
-          "eTag": "8ec9854020eba0c5e4331a346c57af6c"
+          "eTag": "9c5a929a229d5875240e5da936df5c97"
         },
         "interactionModel": {
           "de-DE": {
-            "eTag": "883768b5487db5fc41c7410b7fd58900"
+            "eTag": "9d768d39c92de8dbba65f1b6a433e190"
           }
         },
         "lambda": [
           {
-            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline",
+            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:9",
             "awsRegion": "eu-west-1",
             "functionName": "pegelOnline",
             "alexaUsage": [
@@ -29,7 +29,7 @@
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline"
+                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:9"
               }
             }
           }
