--- a/.ask/config
+++ b/.ask/config
@@ -5,16 +5,16 @@
       "was_cloned": false,
       "resources": {
         "manifest": {
-          "eTag": "9c5a929a229d5875240e5da936df5c97"
+          "eTag": "9c8346f70997279a384165603ddc1865"
         },
         "interactionModel": {
           "de-DE": {
-            "eTag": "9d768d39c92de8dbba65f1b6a433e190"
+            "eTag": "356ba15678779d6e160f08bc9a18b35a"
           }
         },
         "lambda": [
           {
-            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:9",
+            "arn": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline",
             "awsRegion": "eu-west-1",
             "functionName": "pegelOnline",
             "alexaUsage": [
@@ -29,7 +29,7 @@
           "apis": {
             "custom": {
               "endpoint": {
-                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline:9"
+                "uri": "arn:aws:lambda:eu-west-1:467353799488:function:pegelOnline"
               }
             }
           }
