--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "alexa-pegel-online",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "Alexa Skill for interacting with http://www.pegelonline.wsv.de",
   "main": "index.js",
   "scripts": {
     "invoke": "aws lambda invoke --function-name pegelOnline --payload fileb://test/events/alexa-start-session.json test/out.txt && cat test/out.txt",
     "test:unit": "nyc --reporter=lcov --reporter=text mocha test/unit/*",
     "test:integration": "mocha --timeout=20000 test/integration/*",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit",
     "deploy-lambda": "npm prune --production && npm run lambda-zip && npm run lambda-update && npm install",
     "lambda-zip": "zip -x 'node_modules/.cache/*' -r index.zip node_modules && cd src && zip ../index.zip *",
     "lambda-update": "aws lambda update-function-code --function-name pegelOnline --zip-file fileb://index.zip",
