--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
   },
   "homepage": "https://github.com/sgruendel/alexa-pegel-online#readme",
   "dependencies": {
-    "ask-sdk-core": "^2.7.0",
-    "ask-sdk-model": "^1.28.0",
-    "dashbot": "^10.4.0",
+    "ask-sdk-core": "2.8.0",
+    "ask-sdk-model": "1.28.0",
+    "dashbot": "10.4.0",
     "i18next": "19.3.0",
-    "i18next-sprintf-postprocessor": "^0.2.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.0",
-    "winston": "^3.2.0"
+    "i18next-sprintf-postprocessor": "0.2.0",
+    "request": "2.88.0",
+    "request-promise-native": "1.0.0",
+    "winston": "3.2.0"
   },
   "devDependencies": {
-    "alexa-skill-test-framework": "^1.2.0",
-    "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-strongloop": "^2.1.0",
-    "mocha": "^7.1.0",
-    "nyc": "^15.0.0"
+    "alexa-skill-test-framework": "1.2.0",
+    "chai": "4.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-strongloop": "2.1.0",
+    "mocha": "7.1.0",
+    "nyc": "15.0.0"
   },
   "eslintConfig": {
     "parserOptions": {
