--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
   },
   "homepage": "https://github.com/sgruendel/alexa-pegel-online#readme",
   "dependencies": {
-    "ask-sdk-core": "2.9.0",
-    "ask-sdk-model": "1.29.0",
-    "dashbot": "10.4.0",
-    "i18next": "19.7.0",
-    "i18next-sprintf-postprocessor": "0.2.2",
-    "request": "2.88.2",
-    "request-promise-native": "1.0.9",
-    "winston": "3.3.3"
+    "ask-sdk-core": "^2.9.0",
+    "ask-sdk-model": "^1.29.0",
+    "dashbot": "^10.4.5",
+    "i18next": "^19.7.0",
+    "i18next-sprintf-postprocessor": "^0.2.2",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "alexa-skill-test-framework": "1.2.4",
-    "chai": "4.2.0",
-    "eslint": "7.4.0",
-    "eslint-config-strongloop": "2.1.0",
-    "mocha": "8.0.1",
-    "nyc": "15.1.0"
+    "alexa-skill-test-framework": "^1.2.4",
+    "chai": "^4.2.0",
+    "eslint": "^7.7.0",
+    "eslint-config-strongloop": "^2.1.0",
+    "mocha": "^8.1.2",
+    "nyc": "^15.1.0"
   },
   "eslintConfig": {
     "parserOptions": {
