--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,8 @@ jobs:
         cache: 'npm'
         cache-dependency-path: lambda/package-lock.json
     - run: npm ci
+      working-directory: lambda
     - run: npm run build --if-present
+      working-directory: lambda
     - run: npm test
+      working-directory: lambda
