--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,68 +1,73 @@
 {
-  "name": "alexa-pegel-online",
-  "version": "2.20.0",
-  "description": "Alexa Skill for interacting with http://www.pegelonline.wsv.de",
-  "main": "index.js",
-  "scripts": {
-    "reinstall": "rm -rf ./node_modules && npm install",
-    "create-model": "node create-model.js",
-    "test:unit": "nyc --reporter=lcov --reporter=text mocha --timeout=7000 test/unit/*",
-    "test:integration": "mocha --timeout=20000 test/integration/*",
-    "test": "npm run test:unit"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sgruendel/alexa-pegel-online.git"
-  },
-  "author": "Stefan Gründel",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/sgruendel/alexa-pegel-online/issues"
-  },
-  "homepage": "https://github.com/sgruendel/alexa-pegel-online#readme",
-  "dependencies": {
-    "ask-sdk-core": "^2.14.0",
-    "ask-sdk-model": "^1.86.0",
-    "i18next": "^23.8.2",
-    "i18next-sprintf-postprocessor": "^0.2.2",
-    "node-fetch": "^2.7.0",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
-    "alexa-skill-test-framework": "^1.2.4",
-    "chai": "^4.4.1",
-    "eslint": "^8.56.0",
-    "eslint-config-strongloop": "^2.1.0",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 2020
+    "name": "alexa-pegel-online",
+    "version": "2.21.0",
+    "description": "Alexa Skill for interacting with http://www.pegelonline.wsv.de",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "reinstall": "rm -rf ./node_modules && npm install",
+        "create-model": "node create-model.js",
+        "test:unit": "nyc --reporter=lcov --reporter=text mocha --timeout=7000 test/unit/*",
+        "test:integration": "mocha --timeout=20000 test/integration/*",
+        "test": "npm run test:unit"
     },
-    "extends": "strongloop",
-    "env": {
-      "commonjs": true,
-      "es6": true,
-      "node": true,
-      "mocha": true
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sgruendel/alexa-pegel-online.git"
     },
-    "rules": {
-      "indent": [
-        "error",
-        4
-      ],
-      "max-len": [
-        "error",
-        120,
-        4,
-        {
-          "ignoreComments": true,
-          "ignoreUrls": true,
-          "ignoreStrings": true,
-          "ignorePattern": "^\\s*var\\s.+=\\s*(require\\s*\\()|(/)"
+    "author": "Stefan Gründel",
+    "license": "GPL-3.0",
+    "bugs": {
+        "url": "https://github.com/sgruendel/alexa-pegel-online/issues"
+    },
+    "homepage": "https://github.com/sgruendel/alexa-pegel-online#readme",
+    "dependencies": {
+        "ask-sdk-core": "^2.14.0",
+        "ask-sdk-model": "^1.86.0",
+        "i18next": "^23.8.2",
+        "i18next-sprintf-postprocessor": "^0.2.2",
+        "node-fetch": "^3.3.2",
+        "winston": "^3.11.0"
+    },
+    "devDependencies": {
+        "alexa-skill-test-framework": "^1.2.4",
+        "chai": "^5.0.3",
+        "eslint": "^8.56.0",
+        "eslint-config-strongloop": "^2.1.0",
+        "mocha": "^10.3.0",
+        "nyc": "^15.1.0"
+    },
+    "eslintConfig": {
+        "parserOptions": {
+            "ecmaVersion": 2023,
+            "sourceType": "module"
+        },
+        "extends": "strongloop",
+        "env": {
+            "es6": true,
+            "node": true,
+            "mocha": true
+        },
+        "rules": {
+            "indent": [
+                "error",
+                4,
+                {
+                    "SwitchCase": 1
+                }
+            ],
+            "max-len": [
+                "error",
+                120,
+                4,
+                {
+                    "ignoreComments": true,
+                    "ignoreUrls": true,
+                    "ignoreStrings": true,
+                    "ignorePattern": "^\\s*var\\s.+=\\s*(require\\s*\\()|(/)"
+                }
+            ],
+            "space-before-function-paren": 0
         }
-      ]
     }
-  }
 }
