--- a/lambda/package.json
+++ b/lambda/package.json
@@ -30,6 +30,7 @@
         "winston": "^3.17.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
         "@types/chai": "^5.0.1",
         "@types/mocha": "^10.0.10",
         "@types/node": "^22.10.2",
@@ -38,39 +39,7 @@
         "chai": "^5.1.2",
         "eslint": "^9.17.0",
         "eslint-config-strongloop": "^2.1.0",
+        "globals": "^15.14.0",
         "mocha": "^11.0.1"
-    },
-    "eslintConfig": {
-        "parserOptions": {
-            "ecmaVersion": 2023,
-            "sourceType": "module"
-        },
-        "extends": "strongloop",
-        "env": {
-            "es6": true,
-            "node": true,
-            "mocha": true
-        },
-        "rules": {
-            "indent": [
-                "error",
-                4,
-                {
-                    "SwitchCase": 1
-                }
-            ],
-            "max-len": [
-                "error",
-                120,
-                4,
-                {
-                    "ignoreComments": true,
-                    "ignoreUrls": true,
-                    "ignoreStrings": true,
-                    "ignorePattern": "^\\s*var\\s.+=\\s*(require\\s*\\()|(/)"
-                }
-            ],
-            "space-before-function-paren": 0
-        }
     }
 }
