--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,7 +9,9 @@
         "create-model": "node create-model.js",
         "test:unit": "c8 --reporter=lcov --reporter=text mocha --timeout=7000 test/unit/*",
         "test:integration": "mocha --timeout=20000 test/integration/*",
-        "test": "npm run test:unit"
+        "test": "npm run test:unit",
+        "lambda:zip": "zip -r /tmp/pegelOnline.zip node_modules/ package* *.js",
+        "lambda:deploy": "npm run lambda:zip && aws lambda update-function-code --function-name pegelOnline --zip-file fileb:///tmp/pegelOnline.zip"
     },
     "repository": {
         "type": "git",
