fix: correct file extension in lambda:zip script

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -10,7 +10,7 @@
         "test:unit": "c8 --reporter=lcov --reporter=text mocha --timeout=7000 test/unit/*",
         "test:integration": "mocha --timeout=20000 test/integration/*",
         "test": "npm run test:unit",
-        "lambda:zip": "zip -r /tmp/pegelOnline.zip node_modules/ package* *.jsi *.json",
+        "lambda:zip": "zip -r /tmp/pegelOnline.zip node_modules/ package* *.js *.json",
         "lambda:deploy": "npm run lambda:zip && aws lambda update-function-code --function-name pegelOnline --zip-file fileb:///tmp/pegelOnline.zip"
     },
     "repository": {
